--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,6 @@ services:
       context: .
       dockerfile: Dockerfile
     volumes:
-     - '.:/app'
+     - '.:/src'
     ports:
-      - "3001:3000"
+      - "5173"
